Moved no-wrap fix out of tables.less and into college-success.less

--- a/css/ccap-college-success.css
+++ b/css/ccap-college-success.css
@@ -3004,6 +3004,9 @@ div.table.text-heavy.top-titled table thead tr:last-child th {
  * Tables within Notes
  * ------------------------
  */
+div.note div.table table thead tr:first-of-type th {
+  white-space: nowrap;
+}
 div.note div.table table thead tr:first-of-type th:not(:last-child) {
   padding-top: 4.20153356px;
   padding-right: 4.20153356px;
@@ -4437,5 +4440,8 @@ div.note div.table table thead tr:first-of-type th:last-child {
 }
 .section > .titlepage h4 {
   margin-bottom: 1em;
+}
+div.note div.table table thead tr:first-of-type th {
+  white-space: normal;
 }
 /*# sourceMappingURL=ccap-college-success.css.map */
