--- a/css/refactor/themes/business/parts/tables.less
+++ b/css/refactor/themes/business/parts/tables.less
@@ -368,6 +368,7 @@ div.note {
   div.table {
     table thead tr:first-of-type {
       th {
+        white-space: nowrap;
         &:not(:last-child) {
           // padding: 4px 4px 4px 10px;
           .scale-padding(-6, padding-top);
